--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.14"
+BUILDER="6.0"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -10,32 +10,12 @@ else
 	echo -e "The builder requires a internet connection."
 	exit 0;
 fi
-JSON_FILE="https://kernel.org/releases.json"
-if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 4p | grep -w 5.15` ]]; then
-	LTS1_L="4p"
-else
-	if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 5p | grep -w 5.15` ]]; then
-		LTS1_L="5p"
-	else
-		if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 6p | grep -w 5.15` ]]; then
-			LTS1_L="6p"
-		fi
-	fi	
-fi
-if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 3p | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g' | cut -c 1-3  | grep -w "6.1"` ]]; then
-	LTS2_L="3p"
-else
-	if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 4p | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g' | cut -c 1-3  | grep -w "6.1"` ]]; then
-		LTS2_L="4p"
-	else
-		if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 5p | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g' | cut -c 1-3  | grep -w "6.1"` ]]; then
-			LTS2_L="5p"
-		fi
-	fi
-fi
-LTS1=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS1_L | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
-LTS2=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS2_L | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
-STABLE=$(curl -s $JSON_FILE | jq '.latest_stable.version' -r)
+URL="https://kernel.org"
+LTS1=$(curl -s $URL | grep -A1 longterm: -n1 | egrep -o '>[^<]+' | egrep -o '[^>]+' | grep -w "5.15")
+LTS2=$(curl -s $URL | grep -A1 longterm: -n1 | egrep -o '>[^<]+' | egrep -o '[^>]+' | grep -w "6.1")
+LTS3=$(curl -s $URL | grep -A1 longterm: -n1 | egrep -o '>[^<]+' | egrep -o '[^>]+' | grep -w "6.6")
+RC=$(curl -s $URL | grep -A1 'mainline:' | grep -oP '(?<=strong>).*(?=</strong.*)')
+STABLE=$(curl -s $URL/releases.json | jq '.latest_stable.version' -r)
 GCC=`ls -ls /usr/bin/gcc | sed 's/.*\(..\)/\1/' | sed 's/ //g'`
 MYNAME=`echo $USER | sed -e "s/\b\(.\)/\u\1/g"`
 
