--- a/defconfig/sunxi64_defconfig
+++ b/defconfig/sunxi64_defconfig
@@ -606,7 +606,7 @@ CONFIG_SPI_SUN6I=y
 CONFIG_SPI_MUX=m
 CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_AS3722=m
-CONFIG_PINCTRL_AXP209=y
+CONFIG_PINCTRL_AXP209=m
 CONFIG_PINCTRL_CY8C95X0=m
 CONFIG_PINCTRL_MCP23S08=m
 CONFIG_PINCTRL_MICROCHIP_SGPIO=m
@@ -727,6 +727,7 @@ CONFIG_MFD_ACT8945A=m
 CONFIG_MFD_SUN4I_GPADC=y
 CONFIG_MFD_AS3711=y
 CONFIG_MFD_AS3722=m
+CONFIG_MFD_AC100=m
 CONFIG_MFD_AC200=y
 CONFIG_MFD_AXP20X_I2C=y
 CONFIG_MFD_AXP20X_RSB=y
@@ -738,6 +739,8 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=y
 CONFIG_REGULATOR_ACT8865=m
+CONFIG_REGULATOR_ACT8945A=m
+CONFIG_REGULATOR_ARM_SCMI=m
 CONFIG_REGULATOR_AS3711=m
 CONFIG_REGULATOR_AS3722=m
 CONFIG_REGULATOR_AXP20X=y
@@ -904,6 +907,7 @@ CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_SOC_MTK_BTCVSD=m
 CONFIG_SND_SUN4I_CODEC=y
+CONFIG_SND_SUN50IW9_CODEC=m
 CONFIG_SND_SUN8I_CODEC=y
 CONFIG_SND_SUN8I_CODEC_ANALOG=y
 CONFIG_SND_SUN50I_CODEC_ANALOG=y
@@ -911,6 +915,8 @@ CONFIG_SND_SUN4I_I2S=y
 CONFIG_SND_SUN4I_SPDIF=y
 CONFIG_SND_SUN50I_DMIC=y
 CONFIG_SND_SUN9I_HDMI_AUDIO=y
+CONFIG_SND_SOC_SUNXI_AAUDIO=m
+CONFIG_SND_SOC_SUNXI_AHUB=m
 CONFIG_SND_SOC_XTFPGA_I2S=m
 CONFIG_SND_SOC_AC200_CODEC=m
 CONFIG_SND_SOC_AC97_CODEC=m
@@ -1180,8 +1186,12 @@ CONFIG_FB_TFT_TLS8204=m
 CONFIG_FB_TFT_UC1611=m
 CONFIG_FB_TFT_UC1701=m
 CONFIG_FB_TFT_UPD161704=m
+CONFIG_COMMON_CLK_SCMI=m
+CONFIG_COMMON_CLK_SCPI=m
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
+CONFIG_COMMON_CLK_XGENE=y
 CONFIG_COMMON_CLK_PWM=m
+CONFIG_COMMON_CLK_FIXED_MMIO=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_SUN6I=m
 # CONFIG_FSL_ERRATUM_A008585 is not set
@@ -1216,15 +1226,19 @@ CONFIG_SUN4I_GPADC=y
 CONFIG_AD8366=m
 CONFIG_ADA4250=m
 CONFIG_HMC425=m
+CONFIG_IIO_SCMI=m
+CONFIG_IIO_MUX=m
 CONFIG_IIO_HRTIMER_TRIGGER=m
 CONFIG_IIO_INTERRUPT_TRIGGER=m
 CONFIG_IIO_TIGHTLOOP_TRIGGER=m
 CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_LTC2983=m
 CONFIG_PWM=y
+CONFIG_PWM_CLK=m
 CONFIG_PWM_DWC=m
 CONFIG_PWM_PCA9685=m
 CONFIG_PWM_SUN4I=y
+CONFIG_PWM_SUNXI_ENHANCE=m
 CONFIG_RESET_TI_SYSCON=m
 CONFIG_RESET_TI_TPS380X=m
 CONFIG_PHY_XGENE=m
