--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -23,6 +23,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
+CONFIG_USER_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_BOOT_CONFIG=y
 CONFIG_SGETMASK_SYSCALL=y
