--- a/patches/overlays/arm64/meson-g12b-odroid-n2-spidev0.dts
+++ b/patches/overlays/arm64/meson-g12b-odroid-n2-spidev0.dts
@@ -15,7 +15,7 @@
 
 			spidev: spidev@0 {
 				status = "okay";
-				compatible = "odroid,spi-dev";
+				compatible = "amlogic,spi-dev";
 				reg = <0>;
 				spi-max-frequency = <100000000>;
 			};
