--- a/defconfig/sunxi64_defconfig
+++ b/defconfig/sunxi64_defconfig
@@ -684,7 +684,10 @@ CONFIG_BATTERY_DS2780=m
 CONFIG_BATTERY_DS2781=m
 CONFIG_CHARGER_AXP20X=m
 CONFIG_BATTERY_AXP20X=m
+CONFIG_AXP20X_POWER=m
 CONFIG_CHARGER_UCS1002=m
+CONFIG_SENSORS_ARM_SCMI=m
+CONFIG_SENSORS_ARM_SCPI=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_IIO_HWMON=m
 CONFIG_SENSORS_MCP3021=m
@@ -1235,6 +1238,7 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_ARM_SUN8I_A33_MBUS_DEVFREQ=m
 CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_SUN20I_PPU=y
 CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=m
 CONFIG_MEMORY=y
